--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>  
+
+    <link rel="preload" as="font" href="./fonts/runescape_uf.ttf" type="font/ttf" crossorigin="anonymous">
     
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
