Transfer to laptop

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>  
 
-    <link rel="preload" as="font" href="./fonts/runescape_uf.ttf" type="font/ttf" crossorigin="anonymous">
-    
+    <link rel="preload" href="../src/fonts/RuneScape-UF.woff2" as="font" type="font/woff2" crossorigin>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
