Pushing before migrating to Vue3. Not sure if all the libraries will be compatible

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>  
 
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Duel Arena</title>
   </head>
   <body>
     <noscript>
